@@ -4,7 +4,7 @@ name = Silent Gear
 description = Silent Gear
 
 mc_version=1.12.2
-sl_version=6bdc9a0696e575fd6dec72fef8ed112f22d6abe2
+sl_version=1.12-SNAPSHOT
 jei_version=4.11.0.206
 
 fg_version = ForgeGradle:2.3-SNAPSHOT
